libxfont (1:1.3.3-2) UNRELEASED; urgency=low

  * Wrap build-deps in debian/control.

 -- Julien Cristau <jcristau@debian.org>  Tue, 23 Dec 2008 14:42:17 +0100

libxfont (1:1.3.3-1) unstable; urgency=high

  [ Julien Cristau ]
  * Drop dependency on x11-common from libxfont1{,-dbg}.
  * New upstream bugfix release.
  * Disable the type1 rasterizer and support for speedo font files.  The
    former is a security hazard, and Speedo fonts are disabled in the X server
    since before etch anyway.
  * Urgency high so the above gets in lenny.

  [ Brice Goglin ]
  * Add upstream URL to debian/copyright.
  * Add a link to www.X.org and a reference to the upstream module
    in the long description.

 -- Julien Cristau <jcristau@debian.org>  Thu, 17 Jul 2008 22:50:03 +0200

libxfont (1:1.3.2-1) unstable; urgency=low

  * New upstream release
  * Drop CVE-2008-0006.diff, included upstream.

 -- Julien Cristau <jcristau@debian.org>  Fri, 07 Mar 2008 13:32:43 +0100

libxfont (1:1.3.1-2) unstable; urgency=high

  * High urgency upload for security fix.
  * Fix a buffer overflow in the PCF font parser (CVE-2008-0006).
  * debian/control updates
    + add myself to Uploaders, and remove Branden and Fabio with their
      permission
    + s/^XS-Vcs/Vcs/
    + bump Standards-Version to 3.7.3 (no changes)
    + libxfont1 is Section: libs
    + libxfont-dev and libxfont1-dbg are Section: libdevel

 -- Julien Cristau <jcristau@debian.org>  Thu, 17 Jan 2008 00:09:38 +0100

libxfont (1:1.3.1-1) unstable; urgency=low

  * New upstream release.
  * Add libxfont1.shlibs, bump shlibs to >= 1:1.2.9.

 -- Julien Cristau <jcristau@debian.org>  Wed, 05 Sep 2007 22:45:57 +0200

libxfont (1:1.2.9-1) unstable; urgency=low

  * New upstream version.
    - Add a new 'catalogue' FPE (font path element), which takes font
      paths from symlinks in a dir.
  * Use libxfont1 (= ${binary:Version}) instead of ${Source-Version}
    in debian/control.
